# Practica-IV

./: .gitignore  README.md  iv.yaml  pyproject.toml  requirements-dev.txt  tasks.py
docs/: documentacion.md  gestor_dependencias.md  gestor_tareas.md  lenguaje.md
src/: agricultor.py  cooperativa.py  precio.py  producto.py
